crates/toml_edit/tests/fixtures/invalid/float-no-trailing-digits.stderr
TOML parse error at line 1, column 12
  |
1 | answer = 1.
  |            ^
Invalid floating-point number
Expected digit
